preventing text editor overflow glitch on mobile

--- a/src/screens/Subsidiary/Dashboard/screens/Journals/components/MainSection/components/NoteEditor/_textEditor.module.sass
+++ b/src/screens/Subsidiary/Dashboard/screens/Journals/components/MainSection/components/NoteEditor/_textEditor.module.sass
@@ -60,6 +60,7 @@
         margin-bottom: 6px
         padding: 50px 12px 12px 12px
         font-size: 12px
+        opacity: 0
         p  
             font-size: 12px
             margin: 0
